# aifingerprint

./: .gitignore  LICENSE  README.md  analyze.py  brainstorm.py  guardrails.md  patterns.py  pyproject.toml  report2html.py  test_new_heuristics.py  voice-dna.md
samples/ai/: climate_explainer.txt  email_followup.txt  fitness_article.txt  leadership_article.txt  parenting_advice.txt  productivity_blog.txt  python_tutorial.txt  remote_work_blog.txt
samples/ai_corpus/: mdaigt_academic_advancements_in_nuclear_struct_07.txt  mdaigt_academic_dark_matter_an_enigmatic_subst_43.txt  mdaigt_academic_human_computation_a_form_of_co_31.txt  mdaigt_academic_in_this_study_we_address_the_o_28.txt  mdaigt_academic_in_this_study_we_conduct_a_com_41.txt  mdaigt_academic_in_this_study_we_investigate_t_09.txt  mdaigt_academic_in_this_study_we_investigate_t_36.txt  mdaigt_academic_in_this_study_we_investigate_t_38.txt  mdaigt_academic_in_this_study_we_investigate_t_40.txt  mdaigt_academic_in_this_study_we_investigate_t_46.txt  mdaigt_academic_in_this_work_we_explore_the_in_27.txt  mdaigt_academic_neutrino_oscillation_experimen_47.txt  mdaigt_academic_the_perception_that_spanish_ti_02.txt  mdaigt_academic_this_paper_explores_the_search_45.txt  mdaigt_academic_this_research_examines_the_int_23.txt  mdaigt_academic_this_research_paper_explores_t_20.txt  mdaigt_academic_this_research_paper_investigat_26.txt  mdaigt_academic_this_research_paper_presents_a_22.txt  mdaigt_academic_this_study_investigates_orbita_17.txt  mdaigt_academic_this_study_investigates_the_fo_15.txt  mdaigt_academic_understanding_the_effects_of_v_19.txt  mdaigt_academic_understanding_user_behavior_in_34.txt  mdaigt_academic_we_investigate_the_observation_37.txt  mdaigt_news_a_defense_attorney_for_bruce_d_08.txt  mdaigt_news_a_florida_company_is_suing_the_16.txt  mdaigt_news_a_video_posted_online_by_an_is_11.txt  mdaigt_news_britain_s_got_talent_judge_ale_24.txt  mdaigt_news_brits_are_taking_a_break_from__12.txt  mdaigt_news_congressman_suggests_boston_su_21.txt  (+21 more)
src/aifingerprint/: __init__.py  (+7 more)
(+111 files in other folders)
