[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aifingerprint"
version = "1.2.0"
description = "Detect AI writing patterns — scores text 0-100 for AI fingerprints"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Sander Buruma" }]
keywords = ["ai", "detection", "writing", "nlp", "heuristics", "text-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/sanderburuma/aifingerprint"
Repository = "https://github.com/sanderburuma/aifingerprint"
Issues = "https://github.com/sanderburuma/aifingerprint/issues"

[project.scripts]
aifingerprint = "aifingerprint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aifingerprint = ["data/*.txt"]
